[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Mob.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Entities/FireMob.png" type="Texture" id=3]

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 180.0
angle_random = 0.0
scale = 0.5
scale_random = 0.0
color = Color( 1, 1, 1, 0.535922 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Color", "Trail" ]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 3.62001
height = 25.0119

[sub_resource type="Animation" id=2]

resource_name = "Elim"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Mob" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "collision" ]

[node name="Flash" type="Particles2D" parent="." index="0"]

position = Vector2( -4.76837e-07, 4.76837e-07 )
emitting = false
amount = 3
lifetime = 0.1
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 3 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time", "Transform", "Z Index" ]

[node name="Sprite" parent="." index="1"]

position = Vector2( -9.53674e-07, 9.53674e-07 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 3 )
flip_h = true
vframes = 1
hframes = 1
_sections_unfolded = [ "Animation", "Offset", "Visibility" ]

[node name="CollisionShape2D" parent="." index="2"]

rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="4"]

anims/Elim = SubResource( 2 )

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="7"]

position = Vector2( 9.53674e-07, 4.76837e-07 )
scale = Vector2( 2, 1 )
rect = Rect2( -10, -10, 20, 20 )

[node name="Wait" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]

[connection signal="timeout" from="Wait" to="." method="_on_Wait_timeout"]


